# audios

./: .gitignore  meson.build
exec/: main.cpp  main2.cpp
include/: audios.h
include/audios/: audio_filtering.h  audio_rendering.h  configuration.h  export.h  file-processing.h  file_processing.h  geometry.h  interfaces.h  ray_tracer.h
src/: meson.build  private_macros.h
src/_external/: private_embree.h
src/audio-rendering/: audio_rendering_AudiosRenderer_s.cpp
src/audio-rendering/delay-line/: DelayLine_p.h  DelayLine_s.cpp
src/context/: Context_p.h  Context_s.cpp  configuration_s.cpp
src/core/: dr_mp3_source.cpp  dr_wav_source.cpp
src/core/context/: Context.cpp  Context.h
src/core/file-processing/: WAVAudioFileDecoder.cpp  WAVAudioFileDecoder.h
src/core/file-processing/flac/: FLACAudioFileCodec.cpp  FLACAudioFileCodec.h  FLACAudioFileDecoder.cpp  FLACAudioFileDecoder.h  FLACCodec.cpp  FLACCodec.h
src/core/file-processing/mp3/: MP3AudioFileCodec.cpp  MP3AudioFileCodec.h  MP3AudioFileDecoder.cpp  MP3AudioFileDecoder.h  MP3Codec.cpp  MP3Codec.h
src/core/file-processing/wav/: WAVAudioFileCodec.cpp  WAVAudioFileCodec.h  WAVAudioFileDecoder.cpp  WAVAudioFileDecoder.h  WAVCodec.cpp  WAVCodec.h
src/core/filtering/: filters.cpp  filters.h
src/core/geometry/material/: perfect-reflective-material.h
src/core/geometry/space2d/: element2d.cpp
src/core/interfaces/: audio_filtering.h  file_processing.h  filtering.h  geometry.h  material.h
src/core/ray-tracing/: RTEFacade.cpp  RTEFacade.h  RTESceneManager.h
src/exec/: main.cpp
src/file-processing/binary_geometry/: file_processing_BinaryGeometryReader_s.cpp
src/file-processing/flac_unimpl/: FLACCodec.cpp  FLACCodec.h
src/file-processing/mp3_unimpl/: MP3Codec.cpp  MP3Codec.h
src/file-processing/wav/: file_processing_WAVCodec_s.cpp
src/filtering/: audio_filtering_AudioFilterBase_s.cpp  audio_filtering_GainAudioFilter_s.cpp
src/geometry/space2d/: element2d.h  space2d.cpp  space2d.h
src/lib/: audio-library.h
src/ray-tracing/: RTESceneManager_s.cpp  RTEmbreeSceneManager_p.h  ray_tracer_RTEmbreeFacade_s.cpp
src/ray-tracing/geometry/: RTEmbreeGeometryScene_p.h  RTEmbreeGeometryScene_s.cpp  RTEmbreeGeometry_p.h  RTEmbreeGeometry_s.cpp
src/ray-tracing/rendering/: RTEmbreeRenderingManager_p.h  RTEmbreeRenderingManager_s.cpp
src/ray-tracing/scene/: RTEmbreeSceneManager_p.h  RTEmbreeSceneManager_s.cpp
src/utils/: random_p.h  random_s.cpp  utils_s.cpp
